# WhatsCoder

./: .gitignore  LICENSE  README.md  app.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: automation_scheduler.rs  claude_api.rs  database.rs  dynamic_tools.rs  lib.rs
apps/desktop/src/components/: AutomationsPanel.tsx  Breadcrumb.tsx  ChatComposer.tsx  CodeBlock.tsx  CodeViewer.tsx  ConnectionsPanel.tsx  CustomSelect.tsx  DesktopPageShell.tsx  FileExplorer.tsx  GitPanel.tsx  HistoryPanel.tsx  KanbanPanel.tsx  McpSettingsPanel.tsx  PromptsPanel.tsx  ProviderCard.tsx  ProviderDialog.tsx  ProvidersPanel.tsx  ResizableSidebar.tsx  RightSidebar.tsx  SettingsView.tsx  SkillsView.tsx  ThemePicker.tsx  ThreadSidebar.tsx  ThreadToolbar.tsx  ThreadView.tsx  ThreadWorkspace.tsx  UsagePanel.tsx  WindowControls.tsx  WorkspacePanel.tsx
apps/desktop/src/config/: providerPresets.ts
apps/desktop/src/hooks/: useTheme.ts
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  add-connection.tsx
scripts/: ensure-desktop-dev-server.mjs
scripts/live-debug/: drive-desktop-live-debug.mjs  inspect-cdp-page.mjs  mock-app-server.mjs  real-app-server-smoke.mjs
scripts/live-debug/lib/: app-server-client.mjs  cdp-client.mjs
(+40 files in other folders)
