[package]
name = "codex-desktop"
version = "0.1.0"
description = "Codex Desktop - A desktop client for OpenAI Codex App Server"
authors = ["Whats Coder"]
edition = "2021"

[lib]
name = "codex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["parse"] }
dirs-next = "2"
hostname = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
